code/force-app/main/default/objects/FinServ__WealthAppConfig__c/fields/FinServ__EnableAARInverseRoleUpdate__c.field-meta.xml
<CustomField>
    <fullName>FinServ__EnableAARInverseRoleUpdate__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When you update the Related Role field on an account-account relationship record, the Related Role field on the related account-account relationship record is updated.</description>
    <inlineHelpText>When you update the Related Role field on an account-account relationship record, the Related Role field on the related account-account relationship record is updated.</inlineHelpText>
    <label>Update Related Role on associated record</label>
    <type>Checkbox</type>
</CustomField>