code/force-app/main/default/objects/FinServ__WealthAppConfig__c/fields/FinServ__EnableRollupSummary__c.field-meta.xml
<CustomField>
    <fullName>FinServ__EnableRollupSummary__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable Rollup Summary calculations</description>
    <label>Enable Rollup Summary</label>
    <type>Checkbox</type>
</CustomField>