code/force-app/main/default/objects/FinServ__WealthAppConfig__c/fields/FinServ__InteractionUpdateFrequency__c.field-meta.xml
<CustomField>
    <fullName>FinServ__InteractionUpdateFrequency__c</fullName>
    <defaultValue>15</defaultValue>
    <description>Frequency (in minutes) with which the Last Interaction and Next Interaction dates are automatically updated.</description>
    <label>Interaction Update Frequency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>