code/force-app/main/default/objects/FinServ__WealthAppConfig__c/fields/FinServ__ReferrerScoreCalcEnabled__c.field-meta.xml
<CustomField>
    <fullName>FinServ__ReferrerScoreCalcEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable Referrer Score calculations.</description>
    <label>Enable Referrer Score</label>
    <type>Checkbox</type>
</CustomField>