code/force-app/main/default/objects/FinServ__WealthAppConfig__c/fields/FinServ__RollupSummaryTimestamp__c.field-meta.xml
<CustomField>
    <fullName>FinServ__RollupSummaryTimestamp__c</fullName>
    <description>Timestamp for last run rollup summary job</description>
    <label>Rollup Summary Timestamp</label>
    <type>DateTime</type>
</CustomField>